# Python-Learning-Journey

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHEATSHEET.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  NOTES.md  README.md  RESOURCES.md  ROADMAP.md  pyproject.toml  requirements.txt
async/: README.md
data-analysis/: README.md
database/: README.md
decorators/: README.md
decorators/examples/: timer_decorator.py
django/: README.md
docs/: installation.md  learning-plan.md  setup.md  style-guide.md
dsa-python/: README.md
dsa-python/examples/: linked_list.py
exception-handling/: README.md
exception-handling/examples/: custom_exceptions.py
exercises/advanced/: README.md
exercises/beginner/: README.md
fastapi/: README.md
flask/: README.md
generators/: README.md
generators/examples/: fibonacci_generator.py
generators/file-handling/: README.md
interview/: README.md
iterators/: README.md
machine-learning/: README.md
modules/: README.md
multiprocessing/: README.md
multithreading/: README.md
notes/: README.md
oop/: README.md
oop/examples/: inheritance_polymorphism.py
projects/api-projects/: README.md
projects/automation/: README.md
projects/calculator/: README.md  main.py
projects/file-organizer/: README.md
projects/mini-games/: README.md
projects/password-generator/: README.md  main.py
projects/todo-app/: README.md  main.py
projects/weather-app/: README.md
scripts/: README.md
snippets/: README.md  timer_context.py
testing/: README.md
web-scraping/: README.md
(+3 files in other folders)
