[project]
name = "python-learning-journey"
version = "0.1.0"
description = "Personal Python learning repository — notes, exercises, and projects."
authors = [{ name = "Prakhar Ojha" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["projects", "exercises"]
